Minor changes to sht1 pinout

--- a/Project Outputs for zipa-testbed-sensor-circuit/Design Rule Check - board_pcb.html
+++ b/Project Outputs for zipa-testbed-sensor-circuit/Design Rule Check - board_pcb.html
@@ -224,7 +224,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2:42:08 PM</td>
+<td class="front_matter_column3">3:09:00 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -234,7 +234,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc" class="file"><acronym title="C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc">C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc" class="file"><acronym title="C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc">C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">6</td></tr>
+<td class="DRC_summary_header_col3" style="color : red">2</td></tr>
 </table>
 </td>
-</table><a name="ID4GFG0QV2RV5PPDKVEXR0ONXIPPDIQXMVHTTJ0CMKGDORJUHFOW3L"><h2>Summary</h2></a><table>
+</table><a name="IDXN31UMQWAW2ZKX1GGWU42X24VCHASM04UCSOOWGOQOWEF1DR5E"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,86 +265,70 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMEFS5TJZNZPSD3QSE3UD5AEYODOAXTIA3FZSSOLYN1NFXWVNORRK">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDL10RPNNFRDHCEARDTF1OGBRLKFZGXRODKB4XTABVPTEUVCZWDAQ">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2ZSGOBBLOOWLGBL2X0MXICA3JOKIFXAEXZVRLYDTNBJTQWDNULAM">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDHIQCVAT4E2SGGN5HEZNJDK3ISF32JNB1PWE3H5EME4GP4FKBIZVL">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOEOPGMGDLDBJMMSIZ44XFUHIGF2OUFNKVGOVNMHSMBALE4GVPOYD">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#ID2ATWFQZA5T1NDTFTJ4K2GIZBUGQN3MNMVX5C2ICPVPDNDGHG4HIO">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYHWYRC131GMDELQ1OYYBOSGMLN0U05FI0NB0U0LELTWHSUYQPCAF">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDY5SAFBMWHQ2XIXKTMHNFTTCUPMAA3QWPU0L4IHOUV3DNIHJ0R3KK">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFPBF212BJIFHBXA3KSPSWHJV0OLPDSYGWYHP1LBP101Q32BROZKJ">Width Constraint (Min=0.254mm) (Max=0.254mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#IDET3L1DVN2IZMDGWY3UIU3T0DRH4CH423BMEEUPCSI22RY5X0OAAC">Width Constraint (Min=0.254mm) (Max=0.254mm) (Preferred=0.254mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAAC52M1LOOC4D4MAENW0MKSN1II2WQVX1CTJTE5QWWST3JICI3C">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID432WIZBMM4T2BKKYSHKT5NHIHO24433PQEZPDNCSCBZ55EBJMVJF">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMWNX5AHI35QEOZKP5NYFDOWCQB4VCWX3BFJO00EZSHW04REV1SSJ">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
+<td class="column1"><a href="#ID1UZJSV2UGRE3OAX2NQ2ZKJWOTICJ15HA3DZCNFJBP0GQWIYV13CJ">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDH2YEWXPN5GBTDRZOQSUQLYN1JKOF4FULXFPFM1OVN2GBW0DTD25O">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDM4P40UES10NFFJTUMTZQ2IEMPLRXSBW2B2E0ODDYSOHDMGB3E25D">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDPPOTVVQOJTVWJMHJJE4AFVNGTNPTIQAU1AU1DHP3DYQ25QDMYSXL">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDLHD3HRJXHCVBOQPHNA3T25TWAJCQAH3NWBM2TLPYSGJK5V3GVZPN">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDX53ICFVKKRVVO1BHHTUMFZC0TIC0Z0GMHO1LZ5E1QRLHECYCPJTG">Silk To Solder Mask (Clearance=0.254mm) (IsPad),(All)</a></td>
-<td class="column2">3</td>
+<td class="column1"><a href="#IDQJKOXP1VSZ4RBOF4W3YMC2F0OHMZLIHLKJOFE2PBNWY035EF2BUM">Silk To Solder Mask (Clearance=0.254mm) (IsPad),(All)</a></td>
+<td class="column2">2</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSPPYG3MW2RS1NYYOPFTFVWM20MF45MT1214BYLGVOGTGJQXB2HTK">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
-<td class="column2">3</td>
+<td class="column1"><a href="#ID1054VBWCUMA4EJE33CXMSQR03E45WBXAKBYPVWKLBFKW2K3CEVJB">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID1DZIUPSFEUVDK2GF4JEYLKTVWCEPG4WKHGGOMPONA3YFCPYJNMTJ">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDPZXEEXI13WJTBVCMK4CLFF332NA1M14CZEY0TEBEDNYNPSGFU2TE">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDZPFUHSEVMDG0KVYLUYYGYB5EMBV43FTCUNQFN4CDXCP4PB01FZWI">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDM0OWJOT4WYUOPCPA3IAWCZICYLBZSJRFR3MRVRHCWGLQWD0FX4ME">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">6</td>
+<td style="font-weight : bold" class="column2">2</td>
 </tr>
-</table><br><a name="IDX53ICFVKKRVVO1BHHTUMFZC0TIC0Z0GMHO1LZ5E1QRLHECYCPJTG"><table>
+</table><br><a name="IDQJKOXP1VSZ4RBOF4W3YMC2F0OHMZLIHLKJOFE2PBNWY035EF2BUM"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk To Solder Mask (Clearance=0.254mm) (IsPad),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=197.013mil|Location2.X=208.263mil|Location1.Y=2426.868mil|Location2.Y=2438.118mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=197.013mil|Location2.X=208.263mil|Location1.Y=2426.868mil|Location2.Y=2438.118mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.127mm &lt; 0.254mm) Between Pad U1-17(5.147mm,62.611mm) on Multi-Layer And Track (0.195mm,61.595mm)(36.195mm,61.595mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.127mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=170.741mil|Location2.X=178.408mil|Location1.Y=2446.167mil|Location2.Y=2453.833mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=170.741mil|Location2.X=178.408mil|Location1.Y=2446.167mil|Location2.Y=2453.833mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (Collision &lt; 0.254mm) Between Pad U1-17(5.147mm,62.611mm) on Multi-Layer And Track (0.576mm,62.23mm)(36.576mm,62.23mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=97.013mil|Location2.X=108.263mil|Location1.Y=2426.868mil|Location2.Y=2438.118mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=97.013mil|Location2.X=108.263mil|Location1.Y=2426.868mil|Location2.Y=2438.118mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.127mm &lt; 0.254mm) Between Pad U1-18(2.607mm,62.611mm) on Multi-Layer And Track (0.195mm,61.595mm)(36.195mm,61.595mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.127mm]</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=221.282mil|Location2.X=228.948mil|Location1.Y=3536.16mil|Location2.Y=3543.827mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=221.282mil|Location2.X=228.948mil|Location1.Y=3536.16mil|Location2.Y=3543.827mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (Collision &lt; 0.254mm) Between Pad U1-39(5.147mm,90.551mm) on Multi-Layer And Text "voltkey_pins1" (5.718mm,88.9mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0mm]</acronym></a><br></td>
-</tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDSPPYG3MW2RS1NYYOPFTFVWM20MF45MT1214BYLGVOGTGJQXB2HTK"><table>
-<tr>
-<th style="text-align : left" colspan="1" class="rule">Silk to Silk (Clearance=0.254mm) (All),(All)</th>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=786.574mil|Location2.X=797.824mil|Location1.Y=1429.818mil|Location2.Y=1441.068mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=786.574mil|Location2.X=797.824mil|Location1.Y=1429.818mil|Location2.Y=1441.068mil|Absolute=True">Silk To Silk Clearance Constraint: (0.015mm &lt; 0.254mm) Between Text "pir_pins1" (19.106mm,36.314mm) on Top Overlay And Track (0.195mm,36.595mm)(36.195mm,36.595mm) on Top Overlay Silk Text to Silk Clearance [0.015mm]</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=531.181mil|Location2.X=538.848mil|Location1.Y=3496.173mil|Location2.Y=3503.84mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=531.181mil|Location2.X=538.848mil|Location1.Y=3496.173mil|Location2.Y=3503.84mil|Absolute=True">Silk To Silk Clearance Constraint: (Collision &lt; 0.254mm) Between Text "voltkey_pins1" (5.718mm,88.9mm) on Top Overlay And Track (13.75mm,63.908mm)(13.75mm,89.408mm) on Top Overlay Silk Text to Silk Clearance [0mm]</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=541.178mil|Location2.X=548.845mil|Location1.Y=3526.164mil|Location2.Y=3533.83mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\rpi-4b-sensor-extension-board-main\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=541.178mil|Location2.X=548.845mil|Location1.Y=3526.164mil|Location2.Y=3533.83mil|Absolute=True">Silk To Silk Clearance Constraint: (Collision &lt; 0.254mm) Between Text "voltkey_pins1" (5.718mm,88.9mm) on Top Overlay And Track (13.75mm,89.408mm)(31.75mm,89.408mm) on Top Overlay Silk Text to Silk Clearance [0mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=70.741mil|Location2.X=78.408mil|Location1.Y=2446.167mil|Location2.Y=2453.833mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=70.741mil|Location2.X=78.408mil|Location1.Y=2446.167mil|Location2.Y=2453.833mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (Collision &lt; 0.254mm) Between Pad U1-18(2.607mm,62.611mm) on Multi-Layer And Track (0.576mm,62.23mm)(36.576mm,62.23mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0mm]</acronym></a><br></td>
 </tr>
 </table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
