--- a/board_pcbv3.html
+++ b/board_pcbv3.html
@@ -178,12 +178,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">4/11/2024</td>
+<td class="front_matter_column3">4/19/2024</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">1:21:51 PM</td>
+<td class="front_matter_column3">5:44:08 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -193,7 +193,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc" class="file"><acronym title="C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc">C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcb.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcbv3.PcbDoc" class="file"><acronym title="C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcbv3.PcbDoc">C:\Users\Loyola\Documents\GitHub\rpi-4b-sensor-extension-board\board_pcbv3.PcbDoc</acronym></a></td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Units:</td>
@@ -202,15 +202,15 @@
 <form><input type="radio" name="radio_units" id="radio_mm" onclick="changeUnits(this, 'mm')">mm<input type="radio" name="radio_units" id="radio_mil" onclick="changeUnits(this, 'mil')">mils</form>
 </td>
 </tr>
-</table><a name="IDFEDHWK43XO4QIVN52FI5HFPMNNGSUEAWJJJZKQOIB3S3S3RYABDK"><h2>Contents</h2></a><p class="contents_level1"><a href="#IDFEDHWK43XO4QIVN52FI5HFPMNNGSUEAWJJJZKQOIB3S3S3RYABDK">Contents</a></p>
-<p class="contents_level1"><a href="#IDSOCHXRPYSOZFHRH1LHWLGODKKUXJ3I02QNIQYHMW4FRCW3I2PYB">Board Specification</a></p>
-<p class="contents_level2"><a href="#IDD4012MIGFDIPCHYCDYKXHQR5JJTVSUCJFZOEQ1PIQGSKJIGQKXHB">General<br></a></p><br><a name="IDSOCHXRPYSOZFHRH1LHWLGODKKUXJ3I02QNIQYHMW4FRCW3I2PYB"><h2>Board Specification</h2></a><a name="IDD4012MIGFDIPCHYCDYKXHQR5JJTVSUCJFZOEQ1PIQGSKJIGQKXHB"><table>
+</table><a name="IDGI03BYGLORDIDBH4INPYKCKTIN5SWSADSHNW43NIKLJDIRARB2CO"><h2>Contents</h2></a><p class="contents_level1"><a href="#IDGI03BYGLORDIDBH4INPYKCKTIN5SWSADSHNW43NIKLJDIRARB2CO">Contents</a></p>
+<p class="contents_level1"><a href="#IDQWN0R2CLMGXULJ2GBNVGQRUGQCTNGPJZRWJM4UOXMARTFKLRPSUF">Board Specification</a></p>
+<p class="contents_level2"><a href="#ID1MGGANW11LFKAWLDQPKR054SKXUCVPOHTPCXHDLZ2ULGYQNAK2G">General<br></a></p><br><a name="IDQWN0R2CLMGXULJ2GBNVGQRUGQCTNGPJZRWJM4UOXMARTFKLRPSUF"><h2>Board Specification</h2></a><a name="ID1MGGANW11LFKAWLDQPKR054SKXUCVPOHTPCXHDLZ2ULGYQNAK2G"><table>
 <tr>
 <th style="text-align : left" colspan="2" class="">General</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
 <td class="column1">Board Size</td>
-<td class="column2"><a name="coordinate" value="21653388">54.9996mm
+<td class="column2"><a name="coordinate" value="22047244">56mm
 			</a> &nbsp;x &nbsp;<a name="coordinate" value="26378014">67.0002mm
 			</a></td>
 </tr>
